[package]
name = "actix_be"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
bson = "2.8.1"
futures-util = "0.3"



